--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,7 @@ section{
   var scrollWidth = $('.tbl-content').width() - $('.tbl-content table').width();
   $('.tbl-header').css({'padding-right':scrollWidth});
 }).resize();
+
   </script>
 </head>
 <body>
@@ -111,6 +112,7 @@ section{
   <footer>
 
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
